# projector

./: .gitignore  .gitmodules  README.md  README.rst  ambiata-project.cabal  boris-git.toml  boris.toml  cabal.project  init  master.toml
.circleci/: config.yml
projector-cli/: README.md  ambiata-projector-cli.cabal  ambiata-projector-cli.lock-7.10.2  ambiata-projector-cli.lock-8.2.2  master.toml  projector-cli.cabal  projector-cli.lock-8.2.2
projector-cli/main/: cinema.hs  projector.hs  slideshow.hs
projector-cli/test/: .gitignore
projector-cli/test/examples/: example.prj
projector-cli/test/templates/components/: message.mcn  message.prj
projector-cli/test/templates/layout/: basic.prj
projector-core/: README.md  ambiata-projector-core.cabal  ambiata-projector-core.lock-7.10.2  ambiata-projector-core.lock-8.2.2  master.toml  projector-core.cabal  projector-core.lock-8.2.2
projector-core/doc/: language.org
projector-core/src/Projector/: Core.hs
projector-core/src/Projector/Core/: CallGraph.hs  Check.hs  Eval.hs  Map.hs  Match.hs  Prelude.hs  Pretty.hs  Rewrite.hs  Simplify.hs  Syntax.hs  Termination.hs  Type.hs  Util.hs  Warn.hs
projector-core/src/Projector/Core/Prelude/: EitherT.hs
projector-core/test/: ambiata-projector-core-test.cabal  bench.hs  projector-core-test.cabal  test.hs
projector-core/test/Test/Projector/Core/: Arbitrary.hs  CallGraph.hs  Check.hs  Eval.hs  Gen.hs  Map.hs  Match.hs  Simplify.hs  Syntax.hs  Termination.hs  Warn.hs
projector-core/test/Test/Projector/Core/Arbitrary/: Ground.hs  Name.hs  Types.hs  Untyped.hs  WellTyped.hs
projector-html/: README.md  ambiata-projector-html.cabal  ambiata-projector-html.lock-7.10.2  ambiata-projector-html.lock-8.2.1  ambiata-projector-html.lock-8.2.2  master.toml  projector-html.cabal  projector-html.lock-8.2.2
projector-html-haskell/: ambiata-projector-html-haskell.cabal  ambiata-projector-html-haskell.lock-8.2.2  projector-html-haskell.cabal  projector-html-haskell.lock-8.2.2
projector-html-haskell/src/Projector/Html/Backend/: Haskell.hs
projector-html-haskell/src/Projector/Html/Backend/Haskell/: Prim.hs  Rewrite.hs  Syntax.hs
projector-html-haskell/test/: test-io.hs
projector-html-purs/: ambiata-projector-html-purs.cabal  ambiata-projector-html-purs.lock-7.10.2  master.toml  projector-html-purs.cabal  projector-html-purs.lock-8.2.2
projector-html-purs/src/Projector/Html/Backend/: Purescript.hs
projector-html-purs/src/Projector/Html/Backend/Purescript/: Rewrite.hs
projector-html-purs/test/: test-io.hs
projector-html-purs/test/purescript/: package.json
projector-html-runtime-hs/: ambiata-projector-html-runtime.cabal  ambiata-projector-html-runtime.lock-7.10.2  projector-html-runtime.cabal  projector-html-runtime.lock-8.2.2
projector-html-runtime-hs/src/Projector/Html/: Runtime.hs
projector-html-runtime-hs/src/Projector/Html/Runtime/: Blaze.hs  Library.hs  Prim.hs
projector-html/doc/: Makefile  README.machinator.md  build.md  cinema.md  grammar.tex
projector-html/main/: cinema.hs  slideshow.hs
projector-html/src/Projector/: Html.hs
projector-html/src/Projector/Html/: Backend.hs  Core.hs  DataGraph.hs  Elaborator.hs  Interpreter.hs  Lexer.hs  Machinator.hs  ModuleGraph.hs  Parser.hs  Pretty.hs  Syntax.hs
projector-html/src/Projector/Html/Backend/: Data.hs  Haskell.hs  Purescript.hs  Rewrite.hs
projector-html/src/Projector/Html/Backend/Haskell/: Prim.hs  Rewrite.hs  TH.hs
projector-html/src/Projector/Html/Core/: Elaborator.hs  Library.hs  Machinator.hs  Prim.hs
projector-html/src/Projector/Html/Data/: Annotation.hs  Backend.hs  Module.hs  Position.hs  Prim.hs  Template.hs  Token.hs
projector-html/src/Projector/Html/Interpreter/: Hydrant.hs
projector-html/src/Projector/Html/Lexer/: Internal.hs
projector-html/src/Projector/Html/Machinator/: Graph.hs  Lexer.hs  Parser.hs  Pretty.hs
projector-html/src/Projector/Html/Machinator/Data/: Definition.hs  Position.hs  Token.hs  Version.hs
projector-html/src/Projector/Html/Parser/: QQ.hs
projector-html/src/Projector/Html/Syntax/: Lexer.hs  Parser.hs  QQ.hs  Token.hs
projector-html/src/Projector/Html/Syntax/Lexer/: Layout.hs  Tokenise.hs  Whitespace.hs
projector-html/test/: ambiata-projector-html-test.cabal  projector-html-test.cabal  test-io.hs  test.hs
projector-html/test/Test/Projector/Html/: Arbitrary.hs  Expect.hs  Gen.hs  Interpreter.hs  Lexer.hs  ModuleGraph.hs  Parser.hs  Syntax.hs
projector-html/test/Test/Projector/Html/Core/: Elaborator.hs
projector-html/test/interpreter/: append.in  append.out  attr_space.in  attr_space.out  attribute_concat.in  attribute_concat.out  attribute_concat_empty.in  attribute_concat_empty.out  attribute_expr_empty.in  attribute_expr_empty.out  attribute_expr_singleton.in  attribute_expr_singleton.out  attribute_expr_two.in  attribute_expr_two.out  bool_con.in  bool_con.out  bool_con_false.in  bool_con_false.out  fizz.in  fizz.out  foo.in  foo_each.in  foo_each.out  foobar.in  foobar.out  is_empty_false.in  is_empty_false.out  is_empty_true.in  is_empty_true.out  pre.in  pre.out  pre_multiline.in  pre_multiline.out  whitespace.in  whitespace.out
projector-html/test/purescript/: bower.json
projector-html/test/syntax/: brace.in  brace.out  case.in  case.out  case_html.in  case_html.out  conid.in  conid.out  html.in  html.out  indent_hell.in  indent_hell.out  indent_tag.in  indent_tag.out  inline_ham.in  inline_ham.out  paren_plain.in  paren_plain.out  pipe.in  pipe.out  pre.out  record_prec.in  record_prec.out  sensitive_layout.in  sensitive_layout.out  sensitive_space.in  sensitive_space.out  ul.in  ul.out
projector-hydrant/: LICENSE  README.md  projector-hydrant.cabal  projector-hydrant.lock-8.2.2
projector-hydrant/src/Projector/: Hydrant.hs
projector-hydrant/src/Projector/Hydrant/: Data.hs  Raw.hs
projector-hydrant/test/: bench.hs  glass.txt  test.hs
projector-hydrant/test/Test/Projector/: Hydrant.hs
projector-hydrant/test/Test/Projector/Hydrant/: Gen.hs
projector-prelude/: projector-prelude.cabal
projector-prelude/src/P/: Either.hs
(+23 files in other folders)
