name:                  projector-cli
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              projector-cli
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           projector-cli

executable cinema
  hs-source-dirs:     gen
  main-is:            ../main/cinema.hs
  ghc-options:         -Wall -threaded -O2

  build-depends:
                       base
                     , projector-core
                     , projector-html
                     , projector-html-haskell
                     , projector-html-purs
                     , ambiata-machinator-core
                     , containers
                     , directory                       == 1.*
                     , filepath                        == 1.*
                     , Glob                            == 0.7.*
                     , optparse-applicative            == 0.13.*
                     , text                            == 1.2.*
                     , transformers
  other-modules:
                       BuildInfo_projector_cli
                       DependencyInfo_projector_cli
  autogen-modules:
                       BuildInfo_projector_cli
                       DependencyInfo_projector_cli

executable slideshow
  hs-source-dirs:     gen
  main-is:            ../main/slideshow.hs
  ghc-options:         -Wall -threaded -O2

  build-depends:
                       base
                     , projector-core
                     , projector-html
                     , projector-html-haskell
                     , projector-html-purs
                     , containers
                     , haskeline                       == 0.7.*
                     , pretty-show                     == 1.*
                     , text
                     , transformers
  other-modules:
                       BuildInfo_projector_cli
                       DependencyInfo_projector_cli
  autogen-modules:
                       BuildInfo_projector_cli
                       DependencyInfo_projector_cli
