name:                  ambiata-projector-core
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-projector-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-projector-core

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-eithert
                     , transformers                    >= 0.4        && < 0.6
                     , dlist                           == 0.8.*
                     , containers                      == 0.5.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_projector_core

                       Projector.Core
                       Projector.Core.Check
                       Projector.Core.Pretty
                       Projector.Core.Simplify
                       Projector.Core.Syntax
                       Projector.Core.Type

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-projector-core
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , comonad                         == 4.2.*
                     , mtl
                     , containers                      == 0.5.*

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             bench.hs
  ghc-options:         -Wall -threaded -O2
  build-depends:       base
                     , ambiata-projector-core
                     , ambiata-p
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , criterion                       == 1.1.*
                     , text
                     , comonad                         == 4.2.*
                     , containers                      == 0.5.*
