name:                  projector-core
version:               0.1
license:               BSD3
author:                Tim Humphries
maintainer:            Tim Humphries <tim@utf8.me>
copyright:             (c) 2017 Ambiata. (c) 2017-2018 Tim Humphries
synopsis:              ambiata-projector-core
category:              Language
cabal-version:         >= 1.10
build-type:            Custom
description:           ambiata-projector-core

library
  default-language:
                       Haskell2010

  build-depends:
                       base                            >= 3          && < 5
                     , annotated-wl-pprint             == 0.7.*
                     , containers                      >= 0.5.8      && < 0.7
                     , dlist                           == 0.8.*
                     , projector-prelude
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , transformers-either             == 0.0.*
                     , transformers-fix                >= 1.0        && < 2.0
                     , union-find                      == 0.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Projector.Core
                       Projector.Core.Check
                       Projector.Core.Eval
                       Projector.Core.Match     
                       Projector.Core.Pretty
                       Projector.Core.Rewrite
                       Projector.Core.Syntax
                       Projector.Core.Type
                       Projector.Core.Warn

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , ambiata-disorder-core
                     , ambiata-disorder-jack
                     , comonad
                     , containers
                     , hedgehog-corpus                 >= 0.1        && < 2
                     , mtl
                     , pretty-show
                     , projector-core
                     , projector-prelude
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , text
                     , transformers

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             bench.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-disorder-jack
                     , comonad
                     , containers
                     , criterion                       == 1.1.*
                     , hedgehog-corpus                 >= 0.1        && < 2
                     , pretty-show
                     , projector-core
                     , projector-prelude
                     , semigroups
                     , text
