name:                  projector-core
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              projector-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           projector-core

library
  build-depends:
                       base                            >= 3          && < 5
                     , transformers                    >= 0.4        && < 0.6
                     , transformers-fix                == 1.*
                     , dlist                           == 0.8.*
                     , containers                      >= 0.5.8      && < 0.7
                     , text                            == 1.2.*
                     , transformers-bifunctors         == 0.*
                     , annotated-wl-pprint             == 0.7.*
                     , union-find                      == 0.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Projector.Core
                       Projector.Core.Check
                       Projector.Core.Eval
                       Projector.Core.Match
                       Projector.Core.Pretty
                       Projector.Core.Rewrite
                       Projector.Core.Syntax
                       Projector.Core.Type
                       Projector.Core.Warn

                       Projector.Core.Prelude
                       Projector.Core.Prelude.EitherT

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , projector-core
                     , hedgehog                        == 0.6.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , comonad
                     , mtl
                     , containers
                     , text
                     , transformers
                     , semigroups
                     , pretty-show
  other-modules:
                       Test.Projector.Core.Arbitrary
                       Test.Projector.Core.Check
                       Test.Projector.Core.Eval
                       Test.Projector.Core.Match
                       Test.Projector.Core.Syntax
                       Test.Projector.Core.Warn

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             bench.hs
  ghc-options:         -Wall -threaded -O2
  build-depends:       base
                     , projector-core
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , criterion                       == 1.1.*
                     , hedgehog                        == 0.6.*
                     , text
                     , comonad
                     , containers
                     , semigroups
                     , pretty-show
                     , transformers
  other-modules:
                       Test.Projector.Core.Arbitrary
                       Test.Projector.Core.Check
                       Test.Projector.Core.Eval
                       Test.Projector.Core.Match
                       Test.Projector.Core.Syntax
                       Test.Projector.Core.Warn
