name:                  projector-core
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Tim Humphries <tim@utf8.me>
maintainer:            Tim Humphries <tim@utf8.me>, Mark Hibberd <mark@hibberd.id.au>
copyright:             (c) 2016 Ambiata. (c) 2018-2019 Tim Humphries, Mark Hibberd
synopsis:              Projector is a typed, total HTML templating language.
category:              Web, Text, Template
cabal-version:         >= 1.8
build-type:            Simple
description:
  Projector is a typed, total HTML templating language.

  Projector templates can be typechecked, statically analyzed, partially
  evaluated, optimised via rewrite rules, and compiled to any sensible
  DOM representation.

  Projector was designed to enable progressive enhancement, but is also
  useful as a general-purpose type-safe templating system. It provides a
  number of static guarantees and a fast feedback cycle, while also
  decoupling your views from your current choice of framework.

library
  build-depends:
                       base                            >= 3          && < 5
                     , transformers                    >= 0.4        && < 0.6
                     , transformers-fix                == 1.*
                     , dlist                           == 0.8.*
                     , containers                      >= 0.5.8      && < 0.7
                     , text                            == 1.2.*
                     , transformers-bifunctors         == 0.*
                     , annotated-wl-pprint             == 0.7.*
                     , union-find                      == 0.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Projector.Core
                       Projector.Core.Check
                       Projector.Core.Eval
                       Projector.Core.Match
                       Projector.Core.Pretty
                       Projector.Core.Rewrite
                       Projector.Core.Syntax
                       Projector.Core.Type
                       Projector.Core.Warn

                       Projector.Core.Prelude
                       Projector.Core.Prelude.EitherT

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , projector-core
                     , hedgehog                        == 0.6.*
                     , comonad
                     , mtl
                     , containers
                     , text
                     , transformers
                     , semigroups
                     , pretty-show
  other-modules:
                       Test.Projector.Core.Gen
                       Test.Projector.Core.Check
                       Test.Projector.Core.Eval
                       Test.Projector.Core.Match
                       Test.Projector.Core.Syntax
                       Test.Projector.Core.Warn

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             bench.hs
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , projector-core
                     , criterion                       == 1.1.*
                     , hedgehog                        == 0.6.*
                     , text
                     , comonad
                     , containers
                     , semigroups
                     , pretty-show
                     , transformers
  other-modules:
                       Test.Projector.Core.Gen
                       Test.Projector.Core.Check
                       Test.Projector.Core.Eval
                       Test.Projector.Core.Match
                       Test.Projector.Core.Syntax
                       Test.Projector.Core.Warn
