name:                  ambiata-projector-html-haskell
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-projector-html-haskell
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-projector-html-haskell

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-projector-core
                     , ambiata-projector-html
                     , containers                      == 0.5.*
                     , text                            == 1.2.*
                     , template-haskell                >= 2.10       && < 2.14
                     , transformers

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_projector_html_haskell

                       Projector.Html.Backend.Haskell
                       Projector.Html.Backend.Haskell.Prim
                       Projector.Html.Backend.Haskell.Rewrite
                       Projector.Html.Backend.Haskell.Syntax


test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-eithert
                     , ambiata-disorder-jack
                     , ambiata-projector-core
                     , ambiata-projector-core-test
                     , ambiata-projector-html
                     , ambiata-projector-html-haskell
                     , ambiata-projector-html-runtime
                     , ambiata-projector-html-test
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , process
                     , containers
                     , text
  other-modules:
                       Test.IO.Projector.Html.Backend.Haskell
