name:                  projector-html-purs
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Tim Humphries <tim@utf8.me>
maintainer:            Tim Humphries <tim@utf8.me>, Mark Hibberd <mark@hibberd.id.au>
copyright:             (c) 2016 Ambiata. (c) 2018-2019 Tim Humphries, Mark Hibberd
synopsis:              Projector is a typed, total HTML templating language.
category:              Web, Text, Template
cabal-version:         >= 1.8
build-type:            Simple
description:
  Projector is a typed, total HTML templating language.

  Projector templates can be typechecked, statically analyzed, partially
  evaluated, optimised via rewrite rules, and compiled to any sensible
  DOM representation.

  Projector was designed to enable progressive enhancement, but is also
  useful as a general-purpose type-safe templating system. It provides a
  number of static guarantees and a fast feedback cycle, while also
  decoupling your views from your current choice of framework.

library
  build-depends:
                       base                            >= 3          && < 5
                     , projector-core
                     , projector-html
                     , annotated-wl-pprint             == 0.7.*
                     , containers                      == 0.5.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.7

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Projector.Html.Backend.Purescript
                       Projector.Html.Backend.Purescript.Rewrite

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , projector-core
                     , projector-core-test
                     , projector-html
                     , projector-html-purs
                     , projector-html-test
                     , hedgehog                        == 0.6.*
                     , containers
                     , process
                     , text

  other-modules:
                       Test.IO.Projector.Html.Backend.Purescript
