name:                  ambiata-projector-html-runtime
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-projector-html-runtime
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-projector-html-runtime

library
  build-depends:
                       base                            >= 3          && < 5
                     , text                            == 1.2.*
                     , bytestring                      >= 0.10.2     && < 0.11
                     , blaze-markup                    == 0.7.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_projector_html_runtime

                       Projector.Html.Runtime
                       Projector.Html.Runtime.Blaze
                       Projector.Html.Runtime.Library
                       Projector.Html.Runtime.Prim
